# RSD

./: CMakeLists.txt  README.md  package.xml  강화학습 보충자료.odt  학술제 이해 자료.pptx  학술제 판넬_학생 양식.pptx
injae/Lab.9.2/: .bashrc  190708_cuda ,cudnn설치.odt  20190628-Jetson.odt  7.10.odt  Neural_Net 구성 정.odt  bashrc v1.0  bashrc_190807  cuda 설치.odt  face recog.odt  face_recognition.odt  object_detector.odt  object_detector_.py  person model detect 확인.odt  schedule.ods  ssd 구현 .odt  unity ml agents.odt  visualization_utils__.py  로스 스터디 과제.odt  리눅스 명령어 정리.odt  미운 코딩 새끼-파이썬.odt  아나콘다 가상환경에 텐서플로우 설치.odt  텐서 플로 예제제.odt  패키지 설치.odt
injae/Lab.9.2/something_useful/: [How to]Ros 설치 방법.odt  [How to]gazebo pid 수정,설.odt  [How to]gazebo_simulation.odt  [How to]image_capture.odt  [How to]linux mint 19.1 설치 방법.odt  [How to]object_detector.py 단독 실행 방법.odt  [How to]set_param.odt  [How to]드론 시뮬레이션 코수정 .odt  [How to]리눅스 압축 해제.odt  [How to]모델 적용 방법 (gazebo).odt  pid_simulation.odt  target 값 설정과정.odt  강화 학습 구상.odt
injae/Lab.9.2/잡다한 것 2019 08 12/: dropped text.txt  v_u.py
injae/Lab.9.2/잡다한 것 2019 08 12/beginner_tutorials/: package.xml
injae/Lab.9.2/잡다한 것 2019 08 12/beginner_tutorials/scripts/: talker.py
injae/Lab.9.2/잡다한 것 2019 08 12/human_model/1/: 3dexport_freefmobjobj_1562949953.rar  3dexport_freefmstlstl_1562949953.rar
injae/Lab.9.2/잡다한 것 2019 08 12/human_model/2/: 3dexport_johnydae_1537111177.rar  3dexport_johnyobj_1537111177.rar
injae/Lab.9.2/잡다한 것 2019 08 12/human_model/3/: 3dexport_posed_3d_human_8_obj_1531156707.rar
injae/Lab.9.2/잡다한 것 2019 08 12/my_first_python/: package.xml
injae/Lab.9.2/잡다한 것 2019 08 12/my_first_python/scripts/: listener.py  talker.py
injae/Lab.9.2/잡다한 것 2019 08 12/ros_communication/: CMakeLists.txt  package.xml
injae/Lab.9.2/잡다한 것 2019 08 12/ros_communication/msg/: .Position.msg.swp  Position.msg  State.msg
injae/Lab.9.2/잡다한 것 2019 08 12/ros_communication/ros_communication/src/: node1.cpp  node2.cpp  node3.cpp
injae/Lab.9.2/잡다한 것 2019 08 12/ros_communication/src/: node1.cpp  node2.cpp  node3.cpp
injae/Lab.9.2/잡다한 것 2019 08 12/ros_communication/srv/: SetPosition.srv  SetState.srv
injae/Lab.9.2/잡다한 것 2019 08 12/ros_tutorials/: CMakeLists.txt  package.xml
injae/Lab.9.2/잡다한 것 2019 08 12/ros_tutorials/launch/: union.launch
injae/Lab.9.2/잡다한 것 2019 08 12/ros_tutorials_service/: CMakeLists.txt  package.xml
injae/Lab.9.2/잡다한 것 2019 08 12/ros_tutorials_service/src/: service_client.cpp  service_server.cpp
injae/Lab.9.2/정리 파일/보고 완료/: JetsonTx2환경에 vscode 설치하기.odt
src/: DQNAgent.py  env.py  image_capture_test.py
src/save_model/: selfie_drone_dqn.h5
src/save_terminal/: .~lock.test001#  ep1000  test001  test1.ep500
src/save_terminal/1/: test
src/test/: listener.py  talker.py
보고자료/: Anaconda설치 및 활용.odt  기계학습을 통한 face recognition .odt
(+6 files in other folders)
